Implement NeoJoin 'where' using filter operation
Signed-off-by: Jean Patrick Mathes <jeanpatrick.mathes@gmx.de>